# fire-smoke-classifier

./: .gitignore  Dockerfile  README.md  export.py  notebook.ipynb  predict.py  pyproject.toml  smoke_fire_classifier.onnx  test-api.py  test.py  train.py
